Prevent debug button overlapping linear button

--- a/src/scss/common/graph-sketcher-modal.scss
+++ b/src/scss/common/graph-sketcher-modal.scss
@@ -293,7 +293,7 @@
                 }
 
                 &#graph-sketcher-ui-debug-button {
-                    top: 2 * $button-spacing;
+                    top: 3 * $button-spacing + $button-size;
                     left: 2 * $button-spacing;
                 }
 
